epub: fix furigana being cropped sometimes

--- a/nhkeasier-epub/templates/EPUB/styles/stylesheet.css
+++ b/nhkeasier-epub/templates/EPUB/styles/stylesheet.css
@@ -1,6 +1,6 @@
-body {
+p {
     /* ensure there is enough room for furigana */
-    padding-top: 10px;
+    line-height: 1.8;
 }
 @font-face {
 	font-family: "Noto Sans CJK";
